--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.15.3",
-    "tailwindcss": "^3.4.1",
     "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "aos": "^2.3.4",
+    "astro": "^4.16.16",
     "schema-dts": "^1.1.2",
     "swiper": "^11.0.6",
-    "aos": "^2.3.4"
+    "tailwindcss": "^3.4.1",
+    "vite": "^6.0.1"
   }
 }
