--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/tailwind": "^5.1.0",
+    "alpinejs": "^3.14.5",
     "aos": "^2.3.4",
     "astro": "^4.16.16",
+    "astro-icon": "^1.1.4",
     "schema-dts": "^1.1.2",
-    "swiper": "^11.0.6",
+    "swiper": "^11.1.15",
     "tailwindcss": "^3.4.1",
     "vite": "^6.0.1"
   }
